# my-peer-fitness-buddy-app

./: .gitignore  README.md
api/: .env.example  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_create_core_schema.py
api/scripts/: seed.py
api/src/pfb_api/: app.py  config.py  db.py  http.py  models.py  security.py  server.py  us_states.py
api/src/pfb_api/routes/: admin_auth.py  auth.py  badges.py  events.py  facilities.py  locations.py  settings.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AppShell.tsx  BadgePills.tsx  ConfirmActionDialog.tsx  InlineNotice.tsx  LocationSelector.tsx  PaginationControls.tsx  ProtectedAdminRoute.tsx  ProtectedUserRoute.tsx
web/src/components/admin/: BadgeApplicationQueue.tsx  BadgeTypeManager.tsx  FacilityManager.tsx  RunningStateSettings.tsx  StateMultiSelect.tsx
web/src/lib/: api.ts  datetime.ts  pagination.ts
web/src/pages/: AdminBadgesPage.tsx  AdminDashboardPage.tsx  AdminLocationsPage.tsx  AdminLoginPage.tsx  BadgesPage.tsx  EventsPage.tsx  HomePage.tsx  LoginPage.tsx  MyEventsPage.tsx  RegisterPage.tsx  UserDashboardPage.tsx
